# Kaleidoscope

./: .gitignore  README.md  build.bat  clearbuild.bat  run.bat
code/: CMakeLists.txt  main.cpp
